[package]
name = "snipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn-snmp = "*"
rasn = "*"
rasn-smi = "*"
num-bigint = "*"
thiserror = "*"
snipe-macros = { path = "../snipe-macros" }
async-trait = "*"
tokio = "*"
aes = "*"
block-modes = "*"
cfb-mode = "*"
des = "*"
hmac = "*"
md-5 = "*"
sha-1 = "*"
